<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView android:id="@+id/ing_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Nutella"
        android:layout_weight="1"/>
    <TextView android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="8"
        android:layout_marginRight="10dp"/>
    <TextView android:id="@+id/measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Gms"
        />
</LinearLayout>